--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta name="viewport" content="width=1190" />
+    <title>AI VOID</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AI VOID" />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:description" content="AI VOID SaaS" />
+    <meta property="og:site_name" content="AI VOID" />
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
+    <link href="//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-ligature-full.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
